# Minimum target setuptools 39.2.0

[metadata]
name = ansible-core
version = attr: ansible.release.__version__
description = Radically simple IT automation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible, Inc.
author_email = info@ansible.com
url = https://ansible.com/
project_urls =
    Bug Tracker=https://github.com/ansible/ansible/issues
    CI: Azure Pipelines=https://dev.azure.com/ansible/ansible/
    Code of Conduct=https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Documentation=https://docs.ansible.com/ansible-core/
    Mailing lists=https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code=https://github.com/ansible/ansible
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True
# keep ansible-test as a verbatim script to work with editable installs, since it needs to do its
# own package redirection magic that's beyond the scope of the normal `ansible` path redirection
# done by setuptools `develop`
scripts =
    bin/ansible-test

# setuptools 51.0.0
# [options.entry_points]
# console_scripts =
#     ansible = ansible.cli.adhoc:main
#     ansible-config = ansible.cli.config:main
#     ansible-console = ansible.cli.console:main
#     ansible-doc = ansible.cli.doc:main
#     ansible-galaxy = ansible.cli.galaxy:main
#     ansible-inventory = ansible.cli.inventory:main
#     ansible-playbook = ansible.cli.playbook:main
#     ansible-pull = ansible.cli.pull:main
#     ansible-vault = ansible.cli.vault:main
#     ansible-connection = ansible.cli.scripts.ansible_connection_cli_stub:main
#     ansible-test = ansible_test._util.target.cli.ansible_test_cli_stub:main

[flake8]
max-line-length = 160
