[metadata]
name = ansible-collections.python.dist
version = 1.0.0rc2.post3.dev4

[options]
package_dir =
    = .
packages =
    ansible_collections
    ansible_collections.python
    ansible_collections.python.dist
    ansible_collections.python.dist.plugins
    ansible_collections.python.dist.plugins.modules
zip_safe = True
include_package_data = True
